; ModuleID = '/home/carl/AnghaBench/netdata/collectors/proc.plugin/extr_proc_pagetypeinfo.c_pageline_total_count.c'
source_filename = "/home/carl/AnghaBench/netdata/collectors/proc.plugin/extr_proc_pagetypeinfo.c_pageline_total_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pageline = type { i64* }

@MAX_PAGETYPE_ORDER = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.pageline*)* @pageline_total_count to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @pageline_total_count(%struct.pageline* %0) #0 {
  %2 = alloca %struct.pageline*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store %struct.pageline* %0, %struct.pageline** %2, align 8
  store i64 0, i64* %3, align 8
  store i64 0, i64* %4, align 8
  br label %5

5:                                                ; preds = %18, %1
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @MAX_PAGETYPE_ORDER, align 8
  %8 = icmp ult i64 %6, %7
  br i1 %8, label %9, label %21

9:                                                ; preds = %5
  %10 = load %struct.pageline*, %struct.pageline** %2, align 8
  %11 = getelementptr inbounds %struct.pageline, %struct.pageline* %10, i32 0, i32 0
  %12 = load i64*, i64** %11, align 8
  %13 = load i64, i64* %4, align 8
  %14 = getelementptr inbounds i64, i64* %12, i64 %13
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* %3, align 8
  %17 = add i64 %16, %15
  store i64 %17, i64* %3, align 8
  br label %18

18:                                               ; preds = %9
  %19 = load i64, i64* %4, align 8
  %20 = add i64 %19, 1
  store i64 %20, i64* %4, align 8
  br label %5

21:                                               ; preds = %5
  %22 = load i64, i64* %3, align 8
  ret i64 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
